--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,18 @@ textarea {
   resize: none;
 }
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
 a {
   text-decoration: none;
   color: inherit;
